objects/lightsideapps__Script__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__APIVersion__c</fullName>
        <description>The API Version the Script will run as</description>
        <label>API Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Apex_Code__c</fullName>
        <inlineHelpText>The Apex Code of your Script</inlineHelpText>
        <label>Apex Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__DayofMonth__c</fullName>
        <inlineHelpText>On which day of the Month should the Script be Scheduled</inlineHelpText>
        <label>Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__Description__c</fullName>
        <inlineHelpText>Describe what the script does</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__EndDateTime__c</fullName>
        <inlineHelpText>The Date and Time the Hourly Schedule should end</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Password__c</fullName>
        <description>This is the Password for the user who the scheduled script will run as</description>
        <label>Schedule Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>lightsideapps__PreferredStartTime__c</fullName>
        <inlineHelpText>At which time should the Script be Scheduled for</inlineHelpText>
        <label>Preferred Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__RecursEveryWeekOn__c</fullName>
        <label>Recurs Every Week On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUN</fullName>
                </value>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THU</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__SaveDebugLogs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Upon a successfully run script the Debug Log and User Debug will be stored in a new Script Results record</inlineHelpText>
        <label>Save Debug Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduleEndDate__c</fullName>
        <inlineHelpText>Enter the Date the Scripts Schedule will Stop</inlineHelpText>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduleFrequency__c</fullName>
        <inlineHelpText>How often would you like to schedule the Script</inlineHelpText>
        <label>Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduleScript__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to show Script scheduling options</inlineHelpText>
        <label>Schedule Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduleStartDate__c</fullName>
        <inlineHelpText>Enter the Date the Scripts Schedule will Start</inlineHelpText>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduledDateTime__c</fullName>
        <inlineHelpText>What date and time would you like to schedule the Script</inlineHelpText>
        <label>Scheduled Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduledJobId__c</fullName>
        <description>Stores the Id of the next Scheduled Job if the script has been scheduled.</description>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduledSecurityToken__c</fullName>
        <description>This is the Security Token for the user who the scheduled script will run as</description>
        <label>Schedule Security Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ScheduledUsername__c</fullName>
        <inlineHelpText>This is the Username for the user who the scheduled script will run as</inlineHelpText>
        <label>Schedule Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Script</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Description__c</columns>
        <columns>lightsideapps__SaveDebugLogs__c</columns>
        <columns>lightsideapps__ScheduleScript__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>